Add Tags to Txn Params